some changes in somthing html

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         content="Nullamlacus dui ipsum conseque loborttis non euisque morbi penas dapibulum orna. Urnaultrices quis curabitur phasellentesque congue magnis vestibulum quismodo nulla et feugiat adipiscinia pellentum leo.">
     <meta name="keywords" content="The modernist , new , nework ">
     <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/normalize.css" />
 </head>
 
 <body>
@@ -26,16 +27,13 @@
                         <a href="#" class="active">home</a>
                     </li>
                     <li>
-                        <a href="#">styledemo</a>
+                        <a href="#services">services</a>
                     </li>
                     <li>
-                        <a href="#">full width</a>
+                        <a href="#Last_Work">Last Work</a>
                     </li>
                     <li>
-                        <a href="#">dropdown</a>
-                    </li>
-                    <li>
-                        <a href="#">portfolio</a>
+                        <a href="#Contact">Contact</a>
                     </li>
                 </ul>
             </nav>
@@ -57,7 +55,7 @@
             </div>
         </header>
         <hr>
-        <section class="services">
+        <section class="services" id="services">
             <div class="services_section" id="services_section">
                 <div class="services_section_up">
                     <img src="img/1.jpg" alt="img1" loading="lazy">
@@ -83,7 +81,7 @@
             </div>
         </section>
 
-        <div class="last_work">
+        <div class="last_work" id="Last_Work">
             <div class="last_f" id="ssas" id="hover">
                 <div class="last_d">
                     <img src="img/1.jpg" alt="last_img1">
@@ -122,7 +120,7 @@
             </div>
         </div>
         <hr>
-        <footer>
+        <footer id="Contact">
             <div class="p1-foot">
                 <div class="blog">
                     <h2>From The Blog</h2>
